[package]
name = "electron_tasje"
version = "0.5.7"
edition = "2021"
description = "Tiny replacement for electron-builder"
authors = ["lauren n. liberda <lauren@selfisekai.rocks>"]
repository = "https://codeberg.org/selfisekai/electron_tasje"
license = "Apache-2.0"
categories = ["compilers", "command-line-utilities"]
keywords = ["electron"]

[[bin]]
name = "tasje"
required-features = ["clap"]

[features]
backtrace = ["anyhow/backtrace"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
asar = "0.2.0"
clap = { version = "4.3.21", features = ["derive"], optional = true }
globreeks = "0.1.0"
globset = "0.4.9"
globwalk = "0.8.1"
icns = "0.3.1"
ico = "0.3.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
oxipng = { version = "8.0.0", default-features = false }
path-absolutize = "3.0.13"
regex = "1.6.0"
# newer versions unacceptable by security principles
# https://github.com/serde-rs/serde/issues/2537
serde = { version = ">=1.0, <=1.0.171", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"
smart-default = "0.7.1"
toml = "0.7.6"
walkdir = "2.3.3"
