[package]
name = "electron_tasje"
version = "0.7.3"
edition = "2021"
description = "Tiny replacement for electron-builder"
authors = ["lauren n. liberda <lauren@selfisekai.rocks>"]
repository = "https://codeberg.org/selfisekai/electron_tasje"
license = "Apache-2.0 OR MIT"
categories = ["compilers", "command-line-utilities"]
keywords = ["electron"]

[[bin]]
name = "tasje"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap"]
backtrace = ["anyhow/backtrace"]

[dependencies]
anyhow = "1.0.65"
asar = "0.3.0"
clap = { version = "4.3.21", features = ["derive"], optional = true }
globreeks = "0.1.1"
icns = "0.3.1"
ico = "0.3.0"
json5 = "0.4.1"
once_cell = "1.18.0"
oxipng = { version = "9.0.0", default-features = false }
regex = "1.6.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"
smart-default = "0.7.1"
thiserror = "1.0.47"
toml = "0.8.0"
walkdir = "2.3.3"
